fixed double scrollbars

--- a/css/main.scss
+++ b/css/main.scss
@@ -19,7 +19,7 @@ $border-width: 0.1em;
 }
 
 html {
-  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 body {
